--- a/helloworld/src/main/webapp/WEB-INF/web.xml
+++ b/helloworld/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>CXFServlet</servlet-name>
-		<url-pattern>/rest/*</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
